[package]
name = "wraith"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["v4"] }
