[package]
name = "wraith"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = "0.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tempfile = "3.26.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
dirs = "5.0"
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
playwright = "0.0.20"
